--- a/CG_sph/Project.toml
+++ b/CG_sph/Project.toml
@@ -10,6 +10,7 @@ NetCDF = "30363a11-5582-574a-97bb-aa9a979735b9"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
+ScatteredInterpolation = "3f865c0f-6dca-5f4d-999b-29fe1e7e3c92"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StreamMacros = "1418a599-1564-4a75-98e9-b890cf8b552f"
 Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
